--- a/src/css/List.css
+++ b/src/css/List.css
@@ -1,9 +1,9 @@
 #list-container {
-  min-width: calc(15rem * 4 + 0.5rem * 5);
-  width: 100%;
-  height: 100%;
+  -webkit-overflow-scrolling: touch;
+  overflow-x: auto;
   position: relative;
 
+  flex: 1;
   display: grid;
   grid-template-columns: repeat(4, minmax(15rem, 1fr));
 
@@ -11,10 +11,6 @@
   padding-right: max(0.5rem, env(safe-area-inset-right));
   padding-bottom: max(0.5rem, env(safe-area-inset-bottom));
   gap: 0.5rem;
-
-  flex: 1;
-
-  overflow-y: hidden;
 }
 #list-container::before {
   width: 47rem;
@@ -31,8 +27,6 @@
 }
 
 section {
-  height: 100%;
-
   display: flex;
   flex-direction: column;
 
